--- a/style.css
+++ b/style.css
@@ -1,88 +1,63 @@
-body{
-            background-color: rgb(1, 0, 41);
-        }
-        @media only screen and (max-width:600px)
-        {
-            body{
-                background-color: red;
-            }
-         .container {
-    width: 95vw;
-    height: 70vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5vh;
-    
-  }
+body {
+    background-color: rgb(1, 0, 41);
+}
 
-  .ball {
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
-    animation: animX 4s infinite linear, animY 0.7s infinite alternate ease-out;
-  }
+.container {
+    width: 80vw;
+    height: 80vh;
+    display: flex;
+    margin-left: 10vw;
+    background-color: aliceblue;
+    margin-top: 7vh;
+    position: relative;
+    background-image: url("Physics1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
-  .titlename {
-    font-size: medium;
-  }   
-        }
-        .container{
-            width:80vw;
-            height:80vh;
-            
-            display: flex;
-            margin-left:10vw;
-            background-color: aliceblue;
-         margin-top: 7vh;
-         position: relative;
-          background-image: url("Physics1.png");
-          
-          background-repeat: no-repeat;
-          background-size: cover;
-            background-position:center;
-      
-         
-        }
-.ball{
+.ball {
     position: absolute;
-    margin-left:20px;
-    margin-top:20px;
-    width:100px;
+    margin-left: 20px;
+    margin-top: 20px;
+    width: 100px;
     height: 100px;
-    border:2px solid;
+    border: 2px solid;
     border-radius: 50px;
-    background-color:blue;
-   
-   
-    animation:animX 5s infinite linear,animY 0.9s infinite alternate ease-out; 
-    
-}
-
-@keyframes animX{
-from{
-    left: 0;
+    background-color: blue;
+    animation: animX 5s infinite linear, animY 0.9s infinite alternate ease-out;
 
 }
-to{
-    left:80%;
-}
+
+@keyframes animX {
+    from {
+        left: 0;
+
+    }
+
+    to {
+        left: 80%;
+    }
 }
 
-.titlename{
-text-align: center;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-margin-top: 20px;
-margin-bottom:0px;
-padding: 0;
-font-size:larger;
-color:rgb(108, 87, 193)}
-@keyframes animY{
-    from{
-        bottom:0%;
+.titlename {
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    padding: 0;
+    font-size: larger;
+    color: rgb(108, 87, 193)
+}
+
+@keyframes animY {
+    from {
+        bottom: 0%;
         background-color: rgb(32, 242, 249);
     }
-    to{
-        bottom:60%;
+
+    to {
+        bottom: 60%;
         background-color: rgb(115, 142, 229);
     }
 }
